# hetznerdns-to-mikrotik

./: Dockerfile  README.md  loop.sh  pyproject.toml
.github/workflows/: ci.yml
src/hetznerdns_to_mikrotik/: cli.py  hetzner.py  model.py
