[tool.poetry]
name = "hetznerdns-to-mikrotik"
version = "0.0.0"
description = ""
authors = ["Jan Dittrich <mail@jand.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
routeros-api = "^0.18.1"
requests = "^2.32.3"
click = "^8.1.8"

[tool.poetry.scripts]
hdns2mikrotik = "hetznerdns_to_mikrotik.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
